--- a/src/MVC/Vistas/Usuarios/FrmLoginUsuarios.form
+++ b/src/MVC/Vistas/Usuarios/FrmLoginUsuarios.form
@@ -143,7 +143,7 @@
                       <Component id="exitBtn" min="-2" pref="40" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="minimizeBtn" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace min="0" pref="754" max="32767" attributes="0"/>
+                      <EmptySpace pref="754" max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
